--- a/css/editor-styles.css
+++ b/css/editor-styles.css
@@ -15,6 +15,26 @@
     margin-top: 30px;
     margin-bottom: 30px;
 }
+
+.beta-container{
+    background-color: #fffeef;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-style: solid;
+    border-width: 5px;
+    border-color: #97baff;
+    padding-top: 10px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    text-align: center;
+    font-size: 8px;
+}
+
 .challenge-text{
     width: 100%;
 }
